--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <h1>BIENVENIDO</h1>
+
+    <div class="div1">
+       <!-- <img src="./img/Carrusel_Ozeta_3.png" alt="" >-->
+    </div>
+    
 </body>
 </html>
