--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>BIENVENIDO</h1>
 
-    <div class="div1">
-       <!-- <img src="./img/Carrusel_Ozeta_3.png" alt="" >-->
+
     </div>
+    <img src="./img/Carrusel_Ozeta_3.png" alt="" class="img1">
+
     
 </body>
 </html>
