--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/estilo_productos.css">
 
 </head>
 <body>
@@ -21,6 +22,7 @@
     <div>
         
     </div>
+    
 
 
 
