--- a/index.html
+++ b/index.html
@@ -211,25 +211,25 @@
             <!-- IMG 4 -->
             <div class="galeria-img">
                 <a href="/img/img-galeria/bonglab_post_01-04-2022_1.mp4" target="_blank">
-                    <img src="/img/img-galeria/bonglab_post_01-04-2022_1.gif" alt="Paisaje">
+                    <img src="/img/img-galeria/bonglab_post_01-04-2022_1.gif" alt="Publicación para redes sociales">
                 </a>
             </div>
             <!-- IMG 5 -->
             <div class="galeria-img">
                 <a href="/img/img-galeria/astro_animacion.mp4" target="_blank">
-                    <img src="/img/img-galeria/astro_animacion.gif" alt="Paisaje">
+                    <img src="/img/img-galeria/astro_animacion.gif" alt="Animación de logotipo">
                 </a>
             </div>
             <!-- IMG 6 -->
             <div class="galeria-img">
                 <a href="/img/img-galeria/MANUAL-NARUAL.pdf" target="_blank">
-                    <img src="/img/img-galeria/logo-narual.png" alt="Paisaje">
+                    <img src="/img/img-galeria/logo-narual.png" alt="Diseño de Identidad Corporativa">
                 </a>
             </div>
             <!-- IMG 7 -->
             <div class="galeria-img">
                 <a href="/img/img-galeria/Ilustración.png" target="_blank">
-                    <img src="/img/img-galeria/Ilustración.png" alt="Paisaje">
+                    <img src="/img/img-galeria/Ilustración.png" alt="Ilustración">
                 </a>
             </div>
             <!-- IMG 8 -->
@@ -237,7 +237,7 @@
 
             <div class="galeria-img">
                 <a href="/img/img-galeria/A2_IMPULSO_LOGO_ANIMACION.mp4" target="_blank">
-                    <img src="/img/img-galeria/a2.gif" alt="Paisaje">
+                    <img src="/img/img-galeria/a2.gif" alt="Animación de Logotipo">
                 </a>
             </div>
         </div>
