Cambio11-cambio de ruta de las imágenes

--- a/index.html
+++ b/index.html
@@ -190,54 +190,54 @@
         <div class="galeria">
             <!--IMG 1-->
             <div class="galeria-img">
-                <a href="/img/img-galeria/web_1.mp4" target="_blank">
-                    <img src="/img/img-galeria/anim_cuadrada.gif" alt="Animación AllCreativos">
+                <a href="/img/web_1.mp4" target="_blank">
+                    <img src="/img/anim_cuadrada.gif" alt="Animación AllCreativos">
                 </a>
                 </div>
             <!-- IMG 2 -->
             <div class="galeria-img">
-                <a href="/img/img-galeria/mantequilla_de_mani.png" target="_blank">
-                    <img src="/img/img-galeria/mantequilla_de_mani.png" alt="Banner Web LFant">
+                <a href="/img/mantequilla_de_mani.png" target="_blank">
+                    <img src="/img/mantequilla_de_mani.png" alt="Banner Web LFant">
                 </a>
             </div>
             <!-- IMG 3 -->
             <div class="galeria-img">
 
-                    <a href="/img/img-galeria/portafolio_ux.pdf" target="_blank">
-                        <img src="/img/img-galeria/app_all_creativos.png" alt="Proyecto UX">
+                    <a href="/img/portafolio_ux.pdf" target="_blank">
+                        <img src="/img/app_all_creativos.png" alt="Proyecto UX">
                     </a>
 
             </div>
             <!-- IMG 4 -->
             <div class="galeria-img">
-                <a href="/img/img-galeria/bonglab_post_01-04-2022_1.mp4" target="_blank">
-                    <img src="/img/img-galeria/bonglab_post_01-04-2022_1.gif" alt="Publicación para redes sociales">
+                <a href="/img/bonglab_post_01-04-2022_1.mp4" target="_blank">
+                    <img src="/img/bonglab_post_01-04-2022_1.gif" alt="Publicación para redes sociales">
                 </a>
             </div>
             <!-- IMG 5 -->
             <div class="galeria-img">
-                <a href="/img/img-galeria/astro_animacion.mp4" target="_blank">
-                    <img src="/img/img-galeria/astro_animacion.gif" alt="Animación de logotipo">
+                <a href="/img/astro_animacion.mp4" target="_blank">
+                    <img src="/img/astro_animacion.gif" alt="Animación de logotipo">
                 </a>
             </div>
             <!-- IMG 6 -->
             <div class="galeria-img">
-                <a href="/img/img-galeria/MANUAL-NARUAL.pdf" target="_blank">
-                    <img src="/img/img-galeria/logo-narual.png" alt="Diseño de Identidad Corporativa">
+                <a href="/img/MANUAL-NARUAL.pdf" target="_blank">
+                    <img src="/img/logo-narual.png" alt="Diseño de Identidad Corporativa">
                 </a>
             </div>
             <!-- IMG 7 -->
             <div class="galeria-img">
-                <a href="/img/img-galeria/Ilustración.png" target="_blank">
-                    <img src="/img/img-galeria/Ilustración.png" alt="Ilustración">
+                <a href="/img/Ilustración.png" target="_blank">
+                    <img src="/img/Ilustración.png" alt="Ilustración">
                 </a>
             </div>
             <!-- IMG 8 -->
 
 
             <div class="galeria-img">
-                <a href="/img/img-galeria/A2_IMPULSO_LOGO_ANIMACION.mp4" target="_blank">
-                    <img src="/img/img-galeria/a2.gif" alt="Animación de Logotipo">
+                <a href="/img/A2_IMPULSO_LOGO_ANIMACION.mp4" target="_blank">
+                    <img src="/img/a2.gif" alt="Animación de Logotipo">
                 </a>
             </div>
         </div>
