--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             </div>
             <!-- IMG 7 -->
             <div class="galeria-img">
-                <a href="./img/Ilustración.png" target="_blank">
-                    <img src="./img/Ilustración.png" alt="Ilustración">
+                <a href="./img/Ilustracion.png" target="_blank">
+                    <img src="./img/Ilustracion.png" alt="Ilustración">
                 </a>
             </div>
             <!-- IMG 8 -->
